--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://db4free.net:3306/foodway?useSSL=false&serverTimezone=UTC
-#spring.datasource.username=admin_foodway
-#spring.datasource.password=foodway#
-spring.datasource.url=jdbc:sqlserver://foodway.database.windows.net:1433;database=foodway;user=foodway_admin@foodway;password={#Gfgrupo9};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-#spring.jpa.show-sql: true
+# Configurações do banco de dados PostgreSQL
+spring.datasource.url=jdbc:postgresql://foodway-do-user-14693219-0.c.db.ondigitalocean.com:25060/defaultdb?sslmode=require
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # validity of token
 spring.jpa.defer-datasource-initialization=true
 jwt.validity=3600000
