add: database connection

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 # Configurações do banco de dados PostgreSQL
-spring.datasource.url=jdbc:postgresql://foodway-do-user-14693219-0.c.db.ondigitalocean.com:25060/defaultdb?sslmode=require
+spring.datasource.url=jdbc:postgresql://foodway-do-user-14693219-0.c.db.ondigitalocean.com:25061/pool-foodway
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
