feat upvotes started

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=update
 ## Configurações do banco de dados PostgreSQL
 spring.datasource.url=jdbc:postgresql://foodway-do-user-14693219-0.c.db.ondigitalocean.com:25061/pool-foodway
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=AVNS_5THMXrjoZkarn6Wr6JB
+spring.datasource.username=db_admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #spring.datasource.driver-class-name=org.h2.Driver
