--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
-## Configurações do banco de dados PostgreSQL
+## ConfiguraÃ§Ãµes do banco de dados PostgreSQL
 spring.datasource.url=jdbc:postgresql://foodway-do-user-14693219-0.c.db.ondigitalocean.com:25061/pool-foodway
-spring.datasource.password=AVNS_5THMXrjoZkarn6Wr6JB
-spring.datasource.username=db_admin
+spring.datasource.password=AVNS_qNJFieiyBZniPcyjpNE
+spring.datasource.username=doadmin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #spring.datasource.driver-class-name=org.h2.Driver
