removed path variable

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-## Configuraï¿½ï¿½es do banco de dados PostgreSQL
+## Configurações do banco de dados PostgreSQL
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=${DB_URL}
