--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 ## Configurações do banco de dados PostgreSQL
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=
-spring.datasource.password= 
-spring.datasource.username=
+spring.datasource.url=jdbc:postgresql://foodway-do-user-14693219-0.c.db.ondigitalocean.com:25061/pool-foodway
+spring.datasource.password=AVNS_qNJFieiyBZniPcyjpNE
+spring.datasource.username=doadmin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
