TERMINEI A PARTE MAIS DIFICIL DO SEARCH MANOgit add .git add .!

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-
-## Configuraï¿½ï¿½es do banco de dados PostgreSQL
+## Configuracoes do banco de dados PostgreSQL
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -13,8 +11,13 @@ spring.datasource.username=${DB_USER}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+## H2 Config
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 
 # validity of token
 spring.jpa.defer-datasource-initialization=true
