add: logo foodway on initialize api

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -24,5 +24,6 @@ spring.jpa.defer-datasource-initialization=true
 jwt.validity=3600000
 #pass word of token (secret) requers min 32 caracters
 
+spring.banner.location=classpath:banner.txt
 jwt.secret=${JWT_SECRET}
 api.key=AIzaSyBdmmGVqp3SOAYkQ8ef1SN9PDBkm8JjD_s
