--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -27,3 +27,5 @@ jwt.validity=3600000
 spring.banner.location=classpath:banner.txt
 jwt.secret=${JWT_SECRET}
 api.key=AIzaSyBdmmGVqp3SOAYkQ8ef1SN9PDBkm8JjD_s
+
+spring.main.allow-circular-references=true
