--- a/API/src/main/resources/application.yml
+++ b/API/src/main/resources/application.yml
@@ -3,3 +3,8 @@ management:
     web:
       exposure:
         include: [ "*" ]
+feign:
+  client:
+    config:
+      simpleMailClient:
+        url: http://localhost:80
