--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.servlet.multipart.max-request-size=10MB
 ## Configuracoes do banco de dados PostgreSQL
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 spring.datasource.url=${DB_URL}
 spring.datasource.password=${DB_PASS}
