--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -11,15 +11,7 @@ spring.datasource.password=${DB_PASS}
 spring.datasource.username=${DB_USER}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-## H2 Config
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-
+spring.datasource.driver-class-name=org.postgresql.Driver
 # validity of token
 spring.jpa.defer-datasource-initialization=true
 jwt.validity=3600000
