--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -1,4 +1,6 @@
-FROM eclipse-temurin:17-jdk-alpine
-VOLUME /tmp
-COPY target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+FROM openjdk:17
+WORKDIR /app
+COPY target/api-0.0.1-SNAPSHOT.jar /app/api-0.0.1-SNAPSHOT.jar
+ENTRYPOINT ["java","-jar","api-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-jar", "api-0.0.1-SNAPSHOT.jar"]
+
