--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -19,6 +19,6 @@ jwt.validity=3600000
 
 spring.banner.location=classpath:banner.txt
 jwt.secret=${JWT_SECRET}
-api.key=AIzaSyBdmmGVqp3SOAYkQ8ef1SN9PDBkm8JjD_s
+api.key=${GMAPS_API_KEY}
 
 spring.main.allow-circular-references=true
