--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -20,5 +20,6 @@ jwt.validity=3600000
 spring.banner.location=classpath:banner.txt
 jwt.secret=${JWT_SECRET}
 api.key=${GMAPS_API_KEY}
+spring.config.location=classpath:/application.properties,classpath:/s3.properties
 
 spring.main.allow-circular-references=true
