--- a/API/src/main/resources/s3.properties
+++ b/API/src/main/resources/s3.properties
@@ -1,6 +1,6 @@
 #Sat Apr 13 17:45:06 BRT 2024
-bucketName=aaaaa
-accessKey=aaaa
-secret=aa+aaaa
-region=aaaa
-sessionToken=aaaaaaaaaaaaa
+bucketName=${BUCKET_NAME}
+accessKey=${ACESS_KEY}
+secret=${SECRET}
+region=${REGION}
+sessionToken=${SESSION_TOKEN}
