--- a/API/src/main/resources/s3.properties
+++ b/API/src/main/resources/s3.properties
@@ -1,6 +1,5 @@
-#Sat Apr 13 17:45:06 BRT 2024
-bucketName=${BUCKET_NAME}
-accessKey=${ACESS_KEY}
+accessKey=${ACCESS_KEY}
 secret=${SECRET}
 region=${REGION}
+bucketName=${BUCKET_NAME}
 sessionToken=${SESSION_TOKEN}
