--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,24 +1,19 @@
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
 ## Configuracoes do banco de dados PostgreSQL
-
 spring.jpa.hibernate.ddl-auto=update
-
 spring.datasource.url=${DB_URL}
 spring.datasource.password=${DB_PASS}
 spring.datasource.username=${DB_USER}
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 # validity of token
 spring.jpa.defer-datasource-initialization=true
 jwt.validity=3600000
 #pass word of token (secret) requers min 32 caracters
-
 spring.banner.location=classpath:banner.txt
 jwt.secret=${JWT_SECRET}
 api.key=${GMAPS_API_KEY}
 spring.config.location=classpath:/application.properties,classpath:/s3.properties
-
 spring.main.allow-circular-references=true
+server.servlet.context-path=/api
