--- a/API/pom.xml
+++ b/API/pom.xml
@@ -130,7 +130,11 @@
             <artifactId>springfox-core</artifactId>
             <version>3.0.0</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+	</dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
