--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Login to Docker Hub (using encrypted credentials)
         uses: docker/login-action@v2
         with:
-          username: fernadeeess
+          username: matheus.fernandes@sptech.school
           password: janela12
 
       - name: Build and push image to Docker Hub
