--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Login to Docker Hub (using encrypted credentials)
         uses: docker/login-action@v2
         with:
-          username: DOCKERHUB_USERNAME
-          password: DOCKERHUB_PASSWORD
+          username:  ${{ secrets.DOCKERHUB_USERNAME }}
+          password:  ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build and push image to Docker Hub
         run: |
