--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: List files in workspace for debugging
-        run: ls -la
+
+      # - name: Verify for 'localhost' in src directory
+      #   run: |
+      #     if grep -rl 'localhost' /home/runner/work/Site-Institucional/Site-Institucional/src/; then
+      #       echo "TIRA O LOCALHOST CORNO"
+      #       grep -rl 'localhost' /home/runner/work/Site-Institucional/Site-Institucional/src/
+      #       exit 1
+      #     else
+      #       echo "No 'localhost' references found in /home/runner/work/Site-Institucional/Site-Institucional/src/."
+      #     fi
 
       - name: Login to Docker Hub (using encrypted credentials)
         uses: docker/login-action@v2
@@ -26,8 +34,27 @@ jobs:
 
       - name: Build and push image to Docker Hub
         run: |
-          docker build -t fernandeeess/foodway-api:latest .
-          docker push fernandeeess/foodway-api:latest
+          docker build -t fernandeeess/foodway-api:00.00 .
+          docker push fernandeeess/foodway-api:00.00
+
+      # - name: Check "changer" instance with AWS CLI
+      #   run: |
+      #     # Get instance status
+      #     INSTANCE_STATUS=$(aws ec2 describe-instances --filters "Name:tag:Name,Values:changer" | jq -r '.Reservations[].Instances[].State.Name')
+
+      #     # Check if instance is running
+      #     if [[ "${INSTANCE_STATUS}" != "running" ]]; then
+      #       echo "Error: changer instance is not running!"
+
+      #       # Configure AWS CLI for notifications (replace with your setup)
+      #       # ... (e.g., configure SNS topic or other notification service)
+
+      #       # Send notification (replace with your notification command)
+      #       # aws sns publish --topic-arn <your-topic-arn> --message "changer instance down!"
+      #       exit 1
+      #     fi
+
+      #     echo "changer instance is up and running!"
 
       - uses: appleboy/ssh-action@v1.0.3
         with:
