--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,46 +15,37 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
 
-      # - name: Verify for 'localhost' in src directory
-      #   run: |
-      #     if grep -rl 'localhost' /home/runner/work/Site-Institucional/Site-Institucional/src/; then
-      #       echo "TIRA O LOCALHOST CORNO"
-      #       grep -rl 'localhost' /home/runner/work/Site-Institucional/Site-Institucional/src/
-      #       exit 1
-      #     else
-      #       echo "No 'localhost' references found in /home/runner/work/Site-Institucional/Site-Institucional/src/."
-      #     fi
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Build with Maven
+        run: mvn clean package -DskipTests
+        working-directory: ./API
+
+      - name: List files for debugging
+        run: ls -la API/target
 
       - name: Login to Docker Hub (using encrypted credentials)
         uses: docker/login-action@v2
         with:
-          username:  ${{ secrets.DOCKERHUB_USERNAME }}
-          password:  ${{ secrets.DOCKERHUB_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build and push image to Docker Hub
         run: |
           docker build -t fernandeeess/foodway-api:latest .
           docker push fernandeeess/foodway-api:latest
-
-      # - name: Check "changer" instance with AWS CLI
-      #   run: |
-      #     # Get instance status
-      #     INSTANCE_STATUS=$(aws ec2 describe-instances --filters "Name:tag:Name,Values:changer" | jq -r '.Reservations[].Instances[].State.Name')
-
-      #     # Check if instance is running
-      #     if [[ "${INSTANCE_STATUS}" != "running" ]]; then
-      #       echo "Error: changer instance is not running!"
-
-      #       # Configure AWS CLI for notifications (replace with your setup)
-      #       # ... (e.g., configure SNS topic or other notification service)
-
-      #       # Send notification (replace with your notification command)
-      #       # aws sns publish --topic-arn <your-topic-arn> --message "changer instance down!"
-      #       exit 1
-      #     fi
-
-      #     echo "changer instance is up and running!"
 
       - uses: appleboy/ssh-action@v1.0.3
         with:
