--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+server.port=5225
+
 ## Configuracoes do banco de dados PostgreSQL
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${DB_URL}
@@ -7,9 +9,11 @@ spring.datasource.password=${DB_PASS}
 spring.datasource.username=${DB_USER}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 # validity of token
 spring.jpa.defer-datasource-initialization=true
 jwt.validity=3600000
+
 #password of token (secret) requers min 32 caracters
 spring.banner.location=classpath:banner.txt
 jwt.secret=${JWT_SECRET}
@@ -17,6 +21,7 @@ api.key=${GMAPS_API_KEY}
 spring.config.location=classpath:/application.properties,classpath:/s3.properties
 spring.main.allow-circular-references=true
 server.servlet.context-path=/api
+
 #RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
