--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build, Push to Docker Hub, and Deploy Nginx Website (with Localhost Check)
+name: Build, Push to Docker Hub, and Deploy API (with Localhost Check)
 
 on:
   push:
@@ -50,9 +50,9 @@ jobs:
       - name: Deploy to Server
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: "10.0.0.139"
-          username: "ubuntu"
-          key: ${{ secrets.FOODWAY }}
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             sudo docker pull fernandeeess/foodway-api
             sudo docker run -p 80:80 -p 8080:8080 -p 443:443 -d fernandeeess/foodway-api
