--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
           username: ${{ secrets.BASTION_USER }}
           key: ${{ secrets.BASTION_SSH_KEY }}
           script: |
-            ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -t -t ${{ secrets.PRIVATE_USER }}@${{ secrets.PRIVATE_HOST }} << 'ENDSSH'
+            ssh -o StrictHostKeyChecking=no -i ~/.ssh/ssh_key.pem -t -t ${{ secrets.PRIVATE_USER }}@${{ secrets.PRIVATE_HOST }} << 'ENDSSH'
               sudo docker pull fernandeeess/foodway-api
               sudo docker run -p 80:80 -p 5225:8080 -p 443:443 -d fernandeeess/foodway-api
             ENDSSH
