--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,14 +54,7 @@ jobs:
           username: ${{ secrets.BASTION_USER }}
           key: ${{ secrets.BASTION_SSH_KEY }}
           script: |
-            # Define o caminho para o arquivo de chave SSH
-            ssh_key_path=/home/ubuntu/.ssh/ssh_key.pem
-
-            # Define o comando chmod para garantir permissões corretas
-            chmod 600 $ssh_key_path
-
-            # Executa os comandos SSH
-            ssh -o StrictHostKeyChecking=no -i $ssh_key_path -t -t ${{ secrets.PRIVATE_USER }}@${{ secrets.PRIVATE_HOST }} << 'ENDSSH'
+            ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/ssh_key.pem -t -t ${{ secrets.PRIVATE_USER }}@${{ secrets.PRIVATE_HOST }} << 'ENDSSH'
               sudo docker pull fernandeeess/foodway-api
               sudo docker run -p 80:80 -p 5225:8080 -p 443:443 -d fernandeeess/foodway-api
             ENDSSH
