fix: adjust yaml ci/cd 33

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,6 @@ jobs:
           script: |
             ssh -o StrictHostKeyChecking=no \
                 -i /home/ubuntu/.ssh/ssh_key.pem \
-                -t ${{ secrets.PRIVATE_USER }}@${{ secrets.PRIVATE_HOST }} \
+                -t ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} \
                 "sudo docker pull fernandeeess/foodway-api && sudo docker run -p 80:80 -p 5225:8080 -p 443:443 -d fernandeeess/foodway-api"
       
