--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,23 +58,33 @@ jobs:
       - name: Install netcat
         run: sudo apt-get install -y netcat
 
-      - name: Health Check for backend-01 Server
-        run: |
-          if nc -z -w5 ${{ secrets.SERVER_HOST_PRIVATE_ONE }} 22; then
-            echo "backend-01 is up"
-          else
-            echo "backend-01 is down"
-            exit 1
-          fi
+      - name: Health Check for backend-01 Server via Bastion Host
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.BASTION_HOST }}
+          username: ${{ secrets.BASTION_USER }}
+          key: ${{ secrets.BASTION_SSH_KEY }}
+          script: |
+            if ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/ssh_key.pem ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST_PRIVATE_ONE }} "nc -z -w5 localhost 22"; then
+              echo "backend-01 is up"
+            else
+              echo "backend-01 is down"
+              exit 1
+            fi
 
-      - name: Health Check for backend-02 Server
-        run: |
-          if nc -z -w5 ${{ secrets.SERVER_HOST_PRIVATE_TWO }} 22; then
-            echo "backend-02 is up"
-          else
-            echo "backend-02 is down"
-            exit 1
-          fi
+      - name: Health Check for backend-02 Server via Bastion Host
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.BASTION_HOST }}
+          username: ${{ secrets.BASTION_USER }}
+          key: ${{ secrets.BASTION_SSH_KEY }}
+          script: |
+            if ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/ssh_key.pem ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST_PRIVATE_TWO }} "nc -z -w5 localhost 22"; then
+              echo "backend-02 is up"
+            else
+              echo "backend-02 is down"
+              exit 1
+            fi
 
       - name: Deploy to backend-01 Server
         uses: appleboy/ssh-action@v1.0.3
