--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,13 +93,11 @@ jobs:
           username: ${{ secrets.BASTION_USER }}
           key: ${{ secrets.BASTION_SSH_KEY }}
           script: |
-            ssh -o StrictHostKeyChecking=no \
-                -i /home/ubuntu/.ssh/ssh_key.pem \
-                -t ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST_PRIVATE_ONE }} << 'EOF'
-                    sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml down
-                    sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/foodway-api
-                    sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml up -d
-                EOF
+            ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/ssh_key.pem ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST_PRIVATE_ONE }} << EOF
+              sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml down
+              sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/foodway-api
+              sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml up -d
+            EOF
       
 
       - name: Deploy to backend-02 Server
