--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,7 +107,8 @@ jobs:
           username: ${{ secrets.BASTION_USER }}
           key: ${{ secrets.BASTION_SSH_KEY }}
           script: |
-            ssh -o StrictHostKeyChecking=no \
-                -i /home/ubuntu/.ssh/ssh_key.pem \
-                -t ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST_PRIVATE_TWO }} \
-                "sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/foodway-api && sudo docker run -p 80:80 -p 5225:8080 -p 443:443 -d ${{ secrets.DOCKERHUB_USERNAME }}/foodway-api"
+            ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/ssh_key.pem ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST_PRIVATE_TWO }} << EOF
+              sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml down
+              sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/foodway-api
+              sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml up -d
+            EOF
