--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -21,14 +21,14 @@ jobs:
 
       - name: Terraform Plan Destroy
         run: terraform plan -destroy -out=tfplan-destroy
-        working-directory: ./infra
+        working-directory: API/infra
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Terraform Apply Destroy
         run: terraform apply -auto-approve tfplan-destroy
-        working-directory: ./infra
+        working-directory: API/infra
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
