--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,16 +68,18 @@ jobs:
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: us-east-1
 
-      - name: Terraform Init
-        run: terraform init
-        working-directory: API/infra
+      - name: Debug AWS Credentials
+        run: |
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}"
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          echo "AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }}"
 
       - name: Terraform Validate
         run: terraform validate
         working-directory: API/infra
 
       - name: Terraform Plan
-        run: terraform plan -out=tfplan
+        run: timeout 15m terraform plan -out=tfplan
         working-directory: API/infra
 
       - name: Terraform Apply
