--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -15,19 +15,27 @@ jobs:
         with:
           terraform_version: 1.2.0
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: us-east-1
+
       - name: Terraform Init
         run: terraform init
         working-directory: API/infra
 
       - name: Terraform Plan Destroy
-        run: terraform plan -destroy -out=tfplan-destroy
+        run: terraform plan -destroy -auto-approve
         working-directory: API/infra
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Terraform Apply Destroy
-        run: terraform apply -auto-approve tfplan-destroy
+        run: terraform apply -auto-approve
         working-directory: API/infra
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
