--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -28,7 +28,7 @@ jobs:
         working-directory: API/infra
 
       - name: Terraform Plan Destroy
-        run: terraform plan -destroy -auto-approve
+        run: terraform plan -destroy
         working-directory: API/infra
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
