--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -28,15 +28,9 @@ jobs:
         working-directory: API/infra
 
       - name: Terraform Plan Destroy
-        run: terraform plan -destroy
+        run: terraform plan -destroy -out=tfplan
         working-directory: API/infra
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Terraform Apply Destroy
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve tfplan
         working-directory: API/infra
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
