--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,9 +61,10 @@ jobs:
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/foodway-api:latest .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/foodway-api:latest
+        working-directory: ./API/target
 
   deploy-to-aws:
-    needs: build-and-test
+    needs: docker-build-and-push
     runs-on: ubuntu-latest
 
     steps:
