--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,16 @@ jobs:
       - name: List files for debugging
         run: ls -la API/target
 
+      - name: Verify JAR File
+        run: ls -la ./API/target/
+
+  docker-build-and-push:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -56,7 +66,7 @@ jobs:
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/foodway-api:latest
 
   deploy-to-aws:
-    needs: build-and-test
+    needs: docker-build-and-push
     runs-on: ubuntu-latest
 
     steps:
@@ -85,6 +95,10 @@ jobs:
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
+        working-directory: API/infra
+
+      - name: Debug Terraform Output
+        run: terraform output
         working-directory: API/infra
 
       - name: Get EC2 private IPs
