--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -31,6 +31,10 @@ jobs:
         run: terraform plan -destroy -out=tfplan
         working-directory: API/infra
 
+      - name: Verify Plan
+        run: terraform show -json tfplan | jq
+        working-directory: API/infra
+
       - name: Terraform Apply Destroy
         run: terraform apply -auto-approve tfplan
         working-directory: API/infra
