--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,13 +93,20 @@ jobs:
       - name: Get EC2 private IPs
         id: get_ips
         run: |
-          ec2_01_ip=$(terraform output -raw private_ec2_01_private_ip)
-          ec2_02_ip=$(terraform output -raw private_ec2_02_private_ip)
-          echo "$ec2_01_ip"
-          echo "$ec2_02_ip"
+          ec2_01_ip=$(terraform output private_ec2_01_private_ip | awk '{print $1}')
+          ec2_02_ip=$(terraform output private_ec2_02_private_ip | awk '{print $1}')
+          if [ -z "$ec2_01_ip" ] || [ -z "$ec2_02_ip" ]; then
+            echo "Failed to get EC2 IPs" >&2
+            exit 1
+          fi
           echo "EC2_01_IP=$ec2_01_ip" >> $GITHUB_ENV
           echo "EC2_02_IP=$ec2_02_ip" >> $GITHUB_ENV
         working-directory: API/infra
+
+      - name: Display EC2 Private IPs
+        run: |
+          echo "EC2_01 IP: ${{ env.EC2_01_IP }}"
+          echo "EC2_02 IP: ${{ env.EC2_02_IP }}"
 
       - name: Create SSH key file
         run: echo "${{ secrets.AWS_SSH_KEY }}" > private_key.pem
